# dsv2pulseq

./: .gitignore  .gitmodules  LICENSE  README.md  dsv2pulseq.yml  external.seq  pyproject.toml  read_dsv.py  read_dsv_inf.py  read_dsv_samples.py  sequence.py  setup.py
.github/workflows/: publish.yml  python-package.yml
dsv2pulseq/: __init__.py  dsv2pulseq.py  dsv_to_pulseq.py  helper.py  insert_twix_data.py  read_dsv.py  read_dsv_inf.py  read_dsv_samples.py  sequence.py
dsv_test/: gre_GRX.dsv  gre_GRZ.dsv  gre_RFP.dsv
scripts/: bart_reco.py  mrzero_sim.py
test/: check_dsv_files.py  test_all.py  test_flash.py  test_gre.py
test/test_data/: MiniFLASH.seq  MiniFLASH_GRX.dsv  MiniFLASH_GRY.dsv  MiniFLASH_GRZ.dsv  MiniFLASH_INF.dsv  MiniFLASH_RFD.dsv  MiniFLASH_RFP.dsv  dzne_ep3d.seq  dzne_ep3d_GRX.dsv  dzne_ep3d_GRY.dsv  dzne_ep3d_GRZ.dsv  dzne_ep3d_RFD.dsv  dzne_ep3d_RFP.dsv  dzne_ep3d_default.seq  dzne_ep3d_default_GRX.dsv  dzne_ep3d_default_GRY.dsv  dzne_ep3d_default_GRZ.dsv  dzne_ep3d_default_RFD.dsv  dzne_ep3d_default_RFP.dsv  gre.seq
test/test_data/approved/: MiniFLASH.seq  dzne_ep3d.seq  dzne_ep3d_default.seq  gre.seq  pulseq_gre_GRX.dsv  pulseq_gre_GRY.dsv  pulseq_gre_GRZ.dsv  pulseq_gre_INF.dsv  pulseq_gre_RFD.dsv  pulseq_gre_RFP.dsv
test_data/: gre_ADC.dsv  gre_GRY.dsv  gre_INF.dsv  gre_RFD.dsv
